--- a/scripts/example_notebook.ipynb
+++ b/scripts/example_notebook.ipynb
@@ -172,7 +172,7 @@
    "id": "979f13f5",
    "metadata": {},
    "source": [
-    "The alpha helix bundle protein `3vjf.pdb` was converted into a density `3vjf_CA_apix_1_box_dimension_400_res_3.mrc` using alpha carbons only, and a 1 Angstrom/pixel resolution. This file is located in the `example_data` folder. \n",
+    "Unfortunately, density files are too large to store on the github repository. Below is a an example assuming you have a .mrc density file to use. \n",
     "\n",
     "#### step 1: load mrc file and normalize data using the `load_density_file()` and `normalize_and_threshold_data()` subroutines \n",
     "\n",
@@ -184,9 +184,7 @@
     "- `mrc` is  mrcfile data object (using the mrcfile python package)\n",
     "- `t` is the pixel intesity cutoff threshold\n",
     "- `noise_stdev` is the standard deviation of white Gaussian noise to add to the data. Default = 0 (no noise added)\n",
-    "- `norm_T` is a Boolean flag that sets if the inputted threshold is a (raw) unnormalized value, or a normalized value (0,1). Default is False.\n",
-    "\n",
-    "A good threshold for `3vjf_CA_apix_1_box_dimension_400_res_3.mrc` was found empirically to be 0.5, (t=0.5). "
+    "- `norm_T` is a Boolean flag that sets if the inputted threshold is a (raw) unnormalized value, or a normalized value (0,1). Default is False."
    ]
   },
   {
@@ -196,16 +194,16 @@
    "outputs": [],
    "source": [
     "### set input parameters\n",
-    "fname =  Path(data_path,'3vjf_density.mrc')\n",
-    "t = 0.5  # pixel intensity threshold - unnormalized\n",
+    "# fname =  Path(data_path,'3vjf_density.mrc')\n",
+    "# t = 0.5  # pixel intensity threshold - unnormalized\n",
     "\n",
-    "### load density file, normalize the data and threshold, and extract the x,y,z coordinates of the remaining pixels\n",
-    "mrc = d2g.load_density_file(fname)  # load density file\n",
-    "xyz_data = d2g.normalize_and_threshold_data(mrc,t)  # normalize data and threshold and then apply threshold\n",
+    "# ### load density file, normalize the data and threshold, and extract the x,y,z coordinates of the remaining pixels\n",
+    "# mrc = d2g.load_density_file(fname)  # load density file\n",
+    "# xyz_data = d2g.normalize_and_threshold_data(mrc,t)  # normalize data and threshold and then apply threshold\n",
     "\n",
-    "### display results\n",
-    "print('x,y,z coordinates for high intensity pixels in density (.mrc)\\n')\n",
-    "print(xyz_data)"
+    "# ### display results\n",
+    "# print('x,y,z coordinates for high intensity pixels in density (.mrc)\\n')\n",
+    "# print(xyz_data)"
    ]
   },
   {
@@ -236,17 +234,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### set clustering parameters\n",
-    "DBSCAN_epsilon = 1  # DBSCAN  epsilon\n",
-    "DBSCAN_min_samples = 4  # DBSCAN min samples\n",
+    "# ### set clustering parameters\n",
+    "# DBSCAN_epsilon = 1  # DBSCAN  epsilon\n",
+    "# DBSCAN_min_samples = 4  # DBSCAN min samples\n",
     "\n",
-    "### perform clustering and get cluster centers\n",
-    "model = d2g.cluster_data(xyz_data,DBSCAN_epsilon,DBSCAN_min_samples)  # cluster thresholded data using DBSCAN\n",
-    "coarse_model = d2g.get_cluster_centroids(xyz_data,model)  # coarse grain model by getting cluster centroids\n",
+    "# ### perform clustering and get cluster centers\n",
+    "# model = d2g.cluster_data(xyz_data,DBSCAN_epsilon,DBSCAN_min_samples)  # cluster thresholded data using DBSCAN\n",
+    "# coarse_model = d2g.get_cluster_centroids(xyz_data,model)  # coarse grain model by getting cluster centroids\n",
     "\n",
-    "### Plot the results\n",
-    "print('clustering results:')\n",
-    "fig = d2g.plot_clustering_results(xyz_data, coarse_model, figsize=10)  # plot results of clustering and coarse-graining"
+    "# ### Plot the results\n",
+    "# print('clustering results:')\n",
+    "# fig = d2g.plot_clustering_results(xyz_data, coarse_model, figsize=10)  # plot results of clustering and coarse-graining"
    ]
   },
   {
@@ -272,15 +270,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### set input parameters\n",
-    "d_cut = 8  # pairwise cutoff distance in voxels (edge is assigned to two nodes if Euclidean distance <= cutoff distance)\n",
+    "# ### set input parameters\n",
+    "# d_cut = 8  # pairwise cutoff distance in voxels (edge is assigned to two nodes if Euclidean distance <= cutoff distance)\n",
     "\n",
-    "### generate graph (use save=True to save a .gexf file)\n",
-    "G = d2g.create_and_save_graph(coarse_model, d_cut, 'density2graph', save=False)  # create graph where nodes = centroids, edges assigned by pairwise cutoff\n",
+    "# ### generate graph (use save=True to save a .gexf file)\n",
+    "# G = d2g.create_and_save_graph(coarse_model, d_cut, 'density2graph', save=False)  # create graph where nodes = centroids, edges assigned by pairwise cutoff\n",
     "\n",
-    "### output results\n",
-    "plt.title('3vjf density to graph:')\n",
-    "nx.draw(G, pos=nx.spring_layout(G), node_size=20)"
+    "# ### output results\n",
+    "# plt.title('3vjf density to graph:')\n",
+    "# nx.draw(G, pos=nx.spring_layout(G), node_size=20)"
    ]
   },
   {
@@ -300,7 +298,7 @@
     "\n",
     "The 'control' protein graph `3vjf_pdb2graph.gexf` was generated directly from the pdb structure `3vjf.pdb` using `pdb2graph.py`. \n",
     "\n",
-    "the 'sample' protein graph `3vjf_density.gexf` was generated from the 3D volume density `3vjf_density.mrc` using `density2graph.py`.\n",
+    "The 'sample' protein graph `3vjf_density.gexf` was generated from a 3D volume density of 3VFJ and converted into a graph using `density2graph.py`.\n",
     "\n",
     "This approach can be extended to multiple 'control' protein graphs and 'sample' protein graphs\n",
     "\n",
