add density file
added 3vjf .mrc density file
updated example notebook and readme
updated test

--- a/scripts/example_notebook.ipynb
+++ b/scripts/example_notebook.ipynb
@@ -172,7 +172,7 @@
    "id": "979f13f5",
    "metadata": {},
    "source": [
-    "Unfortunately, density files are too large to store on the github repository. Below is a an example assuming you have a .mrc density file to use. \n",
+    "Below is a an example using the 3VJF density file `3vjf_density.mrc`. \n",
     "\n",
     "#### step 1: load mrc file and normalize data using the `load_density_file()` and `normalize_and_threshold_data()` subroutines \n",
     "\n",
@@ -193,17 +193,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### set input parameters\n",
-    "# fname =  Path(data_path,'3vjf_density.mrc')\n",
-    "# t = 0.5  # pixel intensity threshold - unnormalized\n",
+    "## set input parameters\n",
+    "fname =  Path(data_path,'3vjf_density.mrc')\n",
+    "t = 0.5  # pixel intensity threshold - unnormalized\n",
     "\n",
-    "# ### load density file, normalize the data and threshold, and extract the x,y,z coordinates of the remaining pixels\n",
-    "# mrc = d2g.load_density_file(fname)  # load density file\n",
-    "# xyz_data = d2g.normalize_and_threshold_data(mrc,t)  # normalize data and threshold and then apply threshold\n",
+    "### load density file, normalize the data and threshold, and extract the x,y,z coordinates of the remaining pixels\n",
+    "mrc = d2g.load_density_file(fname)  # load density file\n",
+    "xyz_data = d2g.normalize_and_threshold_data(mrc,t)  # normalize data and threshold and then apply threshold\n",
     "\n",
-    "# ### display results\n",
-    "# print('x,y,z coordinates for high intensity pixels in density (.mrc)\\n')\n",
-    "# print(xyz_data)"
+    "### display results\n",
+    "print('x,y,z coordinates for high intensity pixels in density (.mrc)\\n')\n",
+    "print(xyz_data)"
    ]
   },
   {
@@ -234,17 +234,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ### set clustering parameters\n",
-    "# DBSCAN_epsilon = 1  # DBSCAN  epsilon\n",
-    "# DBSCAN_min_samples = 4  # DBSCAN min samples\n",
+    "### set clustering parameters\n",
+    "DBSCAN_epsilon = 1  # DBSCAN  epsilon\n",
+    "DBSCAN_min_samples = 4  # DBSCAN min samples\n",
     "\n",
-    "# ### perform clustering and get cluster centers\n",
-    "# model = d2g.cluster_data(xyz_data,DBSCAN_epsilon,DBSCAN_min_samples)  # cluster thresholded data using DBSCAN\n",
-    "# coarse_model = d2g.get_cluster_centroids(xyz_data,model)  # coarse grain model by getting cluster centroids\n",
+    "### perform clustering and get cluster centers\n",
+    "model = d2g.cluster_data(xyz_data,DBSCAN_epsilon,DBSCAN_min_samples)  # cluster thresholded data using DBSCAN\n",
+    "coarse_model = d2g.get_cluster_centroids(xyz_data,model)  # coarse grain model by getting cluster centroids\n",
     "\n",
-    "# ### Plot the results\n",
-    "# print('clustering results:')\n",
-    "# fig = d2g.plot_clustering_results(xyz_data, coarse_model, figsize=10)  # plot results of clustering and coarse-graining"
+    "### Plot the results\n",
+    "print('clustering results:')\n",
+    "fig = d2g.plot_clustering_results(xyz_data, coarse_model, figsize=10)  # plot results of clustering and coarse-graining"
    ]
   },
   {
@@ -270,15 +270,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ### set input parameters\n",
-    "# d_cut = 8  # pairwise cutoff distance in voxels (edge is assigned to two nodes if Euclidean distance <= cutoff distance)\n",
+    "### set input parameters\n",
+    "d_cut = 8  # pairwise cutoff distance in voxels (edge is assigned to two nodes if Euclidean distance <= cutoff distance)\n",
     "\n",
-    "# ### generate graph (use save=True to save a .gexf file)\n",
-    "# G = d2g.create_and_save_graph(coarse_model, d_cut, 'density2graph', save=False)  # create graph where nodes = centroids, edges assigned by pairwise cutoff\n",
+    "### generate graph (use save=True to save a .gexf file)\n",
+    "G = d2g.create_and_save_graph(coarse_model, d_cut, 'density2graph', save=False)  # create graph where nodes = centroids, edges assigned by pairwise cutoff\n",
     "\n",
-    "# ### output results\n",
-    "# plt.title('3vjf density to graph:')\n",
-    "# nx.draw(G, pos=nx.spring_layout(G), node_size=20)"
+    "### output results\n",
+    "plt.title('3vjf density to graph:')\n",
+    "nx.draw(G, pos=nx.spring_layout(G), node_size=20)"
    ]
   },
   {
